[gd_scene load_steps=40 format=3 uid="uid://k3c8fr5mkris"]

[ext_resource type="PackedScene" uid="uid://cpw4pbq1aphv4" path="res://scenes/entities/root/entity.tscn" id="1_oggim"]
[ext_resource type="Script" uid="uid://dokotpi8lnrq6" path="res://scenes/entities/player/player.gd" id="2_flkwk"]
[ext_resource type="Script" uid="uid://ddatnjvrc4eel" path="res://scenes/entities/player/sprite.gd" id="3_5sj0x"]
[ext_resource type="Resource" uid="uid://br0s8rs4dyg11" path="res://data/items/equipment/arms/no_arm.tres" id="3_18p7g"]
[ext_resource type="Script" uid="uid://bmehrcal5xois" path="res://scenes/entities/player/data/PlayerData.gd" id="3_70kwc"]
[ext_resource type="Texture2D" uid="uid://brond8g8mvrnh" path="res://graphics/entities/player/head/head.png" id="4_1murt"]
[ext_resource type="Script" uid="uid://bsq7au6apc58q" path="res://scenes/entities/player/garment.gd" id="4_5sj0x"]
[ext_resource type="Script" uid="uid://clhgsa4skxbcj" path="res://scenes/entities/player/data/inventory/equipment/EquippedData.gd" id="4_fg2wu"]
[ext_resource type="Script" uid="uid://ckavmyj5jiq24" path="res://scenes/entities/player/input_bus.gd" id="4_yywfu"]
[ext_resource type="Script" uid="uid://bmnqyo75yk667" path="res://scenes/entities/player/data/inventory/InventoryData.gd" id="5_7dqom"]
[ext_resource type="Texture2D" uid="uid://buo420et08eto" path="res://graphics/entities/player/hat/hat_2.png" id="5_70kwc"]
[ext_resource type="Resource" uid="uid://bikq3tf8xgmpl" path="res://data/items/equipment/arms/firelob_arm.tres" id="5_go8vc"]
[ext_resource type="Script" uid="uid://bopt6c14rer5e" path="res://data/items/ItemData.gd" id="6_go8vc"]
[ext_resource type="Texture2D" uid="uid://cqxlgux7mtl4" path="res://graphics/entities/player/cloak/cloak.png" id="6_ovg4i"]
[ext_resource type="Texture2D" uid="uid://dmb17bc30d10v" path="res://graphics/entities/player/body/body.png" id="7_7wli1"]
[ext_resource type="Texture2D" uid="uid://dim7yibfm2b4" path="res://graphics/entities/player/eyes/eyes_6.png" id="7_j0oqr"]
[ext_resource type="Script" uid="uid://fx0v7sa78e80" path="res://scenes/entities/player/arm_group.gd" id="12_70kwc"]
[ext_resource type="Script" uid="uid://drvssa4do5rui" path="res://scenes/entities/player/arm_sprite.gd" id="23_go8vc"]

[sub_resource type="Resource" id="Resource_wghkl"]
script = ExtResource("4_fg2wu")
LArm1 = ExtResource("5_go8vc")
LArm2 = ExtResource("3_18p7g")
RArm1 = ExtResource("3_18p7g")
RArm2 = ExtResource("3_18p7g")
metadata/_custom_type_script = "uid://clhgsa4skxbcj"

[sub_resource type="Resource" id="Resource_yk2xr"]
script = ExtResource("5_7dqom")
equipment = SubResource("Resource_wghkl")
storage = Array[ExtResource("6_go8vc")]([null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null])
metadata/_custom_type_script = "uid://bmnqyo75yk667"

[sub_resource type="Resource" id="Resource_70kwc"]
script = ExtResource("3_70kwc")
current_level = 0
save_pos = Vector2(0, 0)
movespeed = 150
jump_velocity = -750.0
jump_gravity = 3750.0
fall_gravity = 1667.67
max_double_jumps = 1
inventory = SubResource("Resource_yk2xr")
metadata/_custom_type_script = "uid://bmehrcal5xois"

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ovg4i"]
radius = 6.0
height = 20.0

[sub_resource type="Animation" id="Animation_1murt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite/Hat:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite/RArms:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite/LArms:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite/Head:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite/Eyes:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite/RCloak:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Sprite/LCloak:frame")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Sprite/Body:frame")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_j0oqr"]
resource_name = "base_full_sprite"
length = 0.0333367
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite/Hat:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite/Head:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite/Eyes:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite/RCloak:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite/LCloak:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite/Body:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_5sj0x"]
resource_name = "idle_left"
length = 0.933337
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite/Hat:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.233333, 0.466667, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite/Head:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.233333, 0.466667, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite/Eyes:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.233333, 0.466667, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite/RCloak:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.233333, 0.466667, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 2, 4, 6]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite/LCloak:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(-2.23517e-08, 0.233333, 0.466667, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 3, 5, 7]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite/Body:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.233333, 0.466667, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Sprite/RArms:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.235714, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2(0, 1), Vector2(0, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Sprite/LArms:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0.235714, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2(0, 1), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_bj7e2"]
resource_name = "idle_right"
length = 0.933337
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite/Hat:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.233333, 0.466667, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite/Head:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.233333, 0.466667, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite/Eyes:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.233333, 0.466667, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite/RCloak:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.233333, 0.466667, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 3, 5, 7]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite/LCloak:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.233333, 0.466667, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 2, 4, 6]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite/Body:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.233333, 0.466667, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Sprite/RArms:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.235714, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2(0, 1), Vector2(0, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Sprite/LArms:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0.235714, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2(0, 1), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_7wli1"]
resource_name = "walk_left"
length = 0.400003
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite/Hat:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite/Head:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite/Eyes:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite/RCloak:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 2, 4, 6]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite/LCloak:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(-2.23517e-08, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 3, 5, 7]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite/Body:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Sprite/RArms:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.102381, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2(0, 1), Vector2(0, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Sprite/LArms:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0.102381, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2(0, 1), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_ovg4i"]
resource_name = "walk_right"
length = 0.400003
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite/Hat:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite/Head:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite/Eyes:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite/RCloak:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 3, 5, 7]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite/LCloak:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 2, 4, 6]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite/Body:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Sprite/RArms:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.102381, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2(0, 1), Vector2(0, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Sprite/LArms:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0.102381, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2(0, 1), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xy2vv"]
_data = {
&"RESET": SubResource("Animation_1murt"),
&"base_full_sprite": SubResource("Animation_j0oqr"),
&"idle_left": SubResource("Animation_5sj0x"),
&"idle_right": SubResource("Animation_bj7e2"),
&"walk_left": SubResource("Animation_7wli1"),
&"walk_right": SubResource("Animation_ovg4i")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_bj7e2"]
animation = &"idle_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1murt"]
animation = &"idle_left"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_5sj0x"]
blend_point_0/node = SubResource("AnimationNodeAnimation_bj7e2")
blend_point_0/pos = 1.0
blend_point_1/node = SubResource("AnimationNodeAnimation_1murt")
blend_point_1/pos = -1.0
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_5sj0x"]
animation = &"walk_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ovg4i"]
animation = &"walk_right"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_7wli1"]
blend_point_0/node = SubResource("AnimationNodeAnimation_5sj0x")
blend_point_0/pos = -1.0
blend_point_1/node = SubResource("AnimationNodeAnimation_ovg4i")
blend_point_1/pos = 1.0
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ovg4i"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_j0oqr"]
advance_mode = 2
advance_condition = &"walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xy2vv"]
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_635qg"]
states/End/position = Vector2(1191, 100)
states/Idle/node = SubResource("AnimationNodeBlendSpace1D_5sj0x")
states/Idle/position = Vector2(366, 100)
states/Walk/node = SubResource("AnimationNodeBlendSpace1D_7wli1")
states/Walk/position = Vector2(581, 0)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_ovg4i"), "Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_j0oqr"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_xy2vv")]
graph_offset = Vector2(12, -69)

[node name="Player" instance=ExtResource("1_oggim")]
collision_layer = 3
collision_mask = 28
script = ExtResource("2_flkwk")
data = SubResource("Resource_70kwc")

[node name="InputBus" type="Node" parent="." index="0"]
script = ExtResource("4_yywfu")

[node name="Hitbox" parent="." index="1"]
position = Vector2(0, 4)
shape = SubResource("CapsuleShape2D_ovg4i")

[node name="Sprite" type="CanvasGroup" parent="." index="2"]
script = ExtResource("3_5sj0x")

[node name="Hat" type="Sprite2D" parent="Sprite" index="0"]
texture = ExtResource("5_70kwc")
hframes = 4
script = ExtResource("4_5sj0x")
color_index = 1

[node name="Head" type="Sprite2D" parent="Sprite" index="1"]
texture = ExtResource("4_1murt")
hframes = 4
script = ExtResource("4_5sj0x")
garment_index = 1

[node name="Eyes" type="Sprite2D" parent="Sprite" index="2"]
texture = ExtResource("7_j0oqr")
hframes = 4
script = ExtResource("4_5sj0x")
garment_index = 2
color_index = 5

[node name="RCloak" type="Sprite2D" parent="Sprite" index="3"]
position = Vector2(6, 0)
texture = ExtResource("6_ovg4i")
hframes = 8
script = ExtResource("4_5sj0x")
garment_index = 3

[node name="RArms" type="Node2D" parent="Sprite" index="4" node_paths=PackedStringArray("active_arm", "inactive_arm")]
script = ExtResource("12_70kwc")
left_or_right = true
active_arm = NodePath("RArm1")
inactive_arm = NodePath("RArm2")

[node name="RArm1" type="Sprite2D" parent="Sprite/RArms" index="0"]
position = Vector2(0, 1)
rotation = 0.785398
offset = Vector2(6, 0)
script = ExtResource("23_go8vc")
arm_index = 2

[node name="CastPointMarker" type="Marker2D" parent="Sprite/RArms/RArm1" index="0"]
position = Vector2(11, 0)
gizmo_extents = 2.0

[node name="RArm2" type="Sprite2D" parent="Sprite/RArms" index="1"]
position = Vector2(0, 3)
rotation = 0.785398
offset = Vector2(6, 0)
script = ExtResource("23_go8vc")
arm_index = 3

[node name="CastPointMarker" type="Marker2D" parent="Sprite/RArms/RArm2" index="0"]
position = Vector2(11, 0)
gizmo_extents = 2.0

[node name="Body" type="Sprite2D" parent="Sprite" index="5"]
texture = ExtResource("7_7wli1")
hframes = 4
script = ExtResource("4_5sj0x")
garment_index = 4

[node name="LArms" type="Node2D" parent="Sprite" index="6" node_paths=PackedStringArray("active_arm", "inactive_arm")]
script = ExtResource("12_70kwc")
active_arm = NodePath("LArm1")
inactive_arm = NodePath("LArm2")

[node name="LArm2" type="Sprite2D" parent="Sprite/LArms" index="0"]
position = Vector2(-4, 3)
rotation = 0.785398
offset = Vector2(6, 0)
script = ExtResource("23_go8vc")
arm_index = 1

[node name="CastPointMarker" type="Marker2D" parent="Sprite/LArms/LArm2" index="0"]
position = Vector2(11, 0)
gizmo_extents = 2.0

[node name="LArm1" type="Sprite2D" parent="Sprite/LArms" index="1"]
position = Vector2(-4, 1)
rotation = 0.785398
offset = Vector2(6, 0)
script = ExtResource("23_go8vc")

[node name="CastPointMarker" type="Marker2D" parent="Sprite/LArms/LArm1" index="0"]
position = Vector2(11, 0)
gizmo_extents = 2.0

[node name="LCloak" type="Sprite2D" parent="Sprite" index="7"]
position = Vector2(-6, 0)
texture = ExtResource("6_ovg4i")
hframes = 8
script = ExtResource("4_5sj0x")
garment_index = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="3"]
libraries = {
&"": SubResource("AnimationLibrary_xy2vv")
}

[node name="AnimationTree" type="AnimationTree" parent="." index="4"]
tree_root = SubResource("AnimationNodeStateMachine_635qg")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/idle = false
parameters/conditions/walk = false
parameters/Idle/blend_position = 0.0014925
parameters/Walk/blend_position = 0

[node name="PlayerCamera" type="Camera2D" parent="." index="5"]
position_smoothing_enabled = true

[connection signal="left_arm_switched" from="InputBus" to="Sprite/LArms" method="_on_left_arm_switched"]
[connection signal="right_arm_switched" from="InputBus" to="Sprite/RArms" method="_on_right_arm_switched"]
